--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
   bloc: ^8.1.1
   cupertino_icons: ^1.0.2
   firebase_core: ^2.5.0
+  firebase_database: ^10.0.10
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  mocktail: ^0.3.0
   shared_preferences: ^2.0.17
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
