--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   flutter_form_builder: ^7.7.0
   form_builder_validators: ^8.4.0
+  kartal: ^2.8.0
   mocktail: ^0.3.0
   shared_preferences: ^2.0.17
   uuid: ^3.0.7
