--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_form_builder: ^7.7.0
+  flutter_svg: null
   form_builder_validators: ^8.4.0
   kartal: ^2.8.0
   mocktail: ^0.3.0
@@ -60,8 +61,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
