--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_easyloading: ^3.0.5
   flutter_form_builder: ^7.7.0
   flutter_svg: null
   form_builder_validators: ^8.4.0
